syntax = "proto3";

package api.v1;
option go_package = "github.com/intelops/compage/gen/api/v1;project";

service ProjectService {
  rpc GenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
  rpc RegenerateCode (GenerateCodeRequest) returns (stream GenerateCodeResponse) {}
}

message GenerateCodeRequest {
  string compageCoreVersion = 1;
  string projectName = 2;
  string projectJSON = 3;
  string projectMetadata = 4;
  string gitRepositoryName = 5;
  string gitPlatformName = 6;
  string gitPlatformURL = 7;
  string gitPlatformUserName = 8;
}

message GenerateCodeResponse{
  bytes fileChunk = 1;
}